# geo-1004-assignments

./: .gitmodules  README.md
01/: .gitignore  CMakeLists.txt  hw1.cpp  main.cpp
01/10-282-562-obj/: merged-LoD13.obj.mtl  merged-LoD22.obj.mtl  merged.obj.mtl
